--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --compilers js:babel-core/register src/test",
-    "why": "babel-node src/main/date.js"
+    "disemvowel": "babel-node src/main/disemvowel.js",
+    "date": "babel-node src/main/date.js",
+    "shuffle": "babel-node src/main/permutations.js",
+    "guess": "babel-node src/main/guess.js",
+    "scrabble": "babel-node src/main/scrab.js",
+    "totalperm": "babel-node src/extras/totalPermutations.js"
+
   },
   "dependencies": {
     "babel-cli": "^6.22.2",
